fixed 100vh causing overflow in sidebar by adding a bottom padding

--- a/client/src/components/Map/Sidebar/LeftSidebar.css
+++ b/client/src/components/Map/Sidebar/LeftSidebar.css
@@ -51,6 +51,7 @@
   position: relative;
   height: 100vh;
   overflow: auto;
+  padding-bottom: 60px;
 }
 
 #version-text {
